[package]
name = "mempool-watcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = { workspace = true }
tokio = { workspace = true, features = ["full"] }
alloy = { workspace = true, features = ["full"] }
futures-util = { workspace =true }
