[package]
name = "tx-sender"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { version = "2.0.8" }
tokio = { version = "1.31.0", features = ["full"] }

[build-dependencies]
ethers = { version = "2.0.8", features = ["abigen"] }
convert_case = "0.6.0"